feat: add adaptability

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <main>
     <div class="contener main-contener">
         <section class="section-content" id="profile">
-            <img class="avatar"  src="./assets/foto.jpg" alt="foto">
+            <p class="header-avatar">
+                <img class="avatar"  src="./assets/foto.jpg" alt="foto">
+            </p>           
             <h1 class="main-title">Olga Alexandrova</h1>
             <p>Junior Fronted Developer</p>
         </section>
