feat:add button up

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@ function towelSort (matrix) {
         </div>
 
     </footer>
+    <a href="#" class="topbutton">
+        <img class="topico" src="./assets/up.png" alt="up">
+    </a>
     
 </body>
 </html>
