--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ Following matrix should be 'sorted' to:
 [1, 2, 3, 6, 5, 4, 7, 8, 9 ]
     </pre>
     <div class="code-exampl">  
-        <code>
-        <pre >            
+        <pre >         <code>                  
 function towelSort (matrix) {
     if ( arguments.length==0) {return []}
     else{
@@ -103,8 +102,10 @@ function towelSort (matrix) {
             matrix.forEach(item => { newArr = newArr.concat(item);});
             return newArr;}
         }
-}                  </pre>
-</code> 
+}   
+</code>             
+ </pre>
+
     </div>
 
  </section>
